--- a/index.html
+++ b/index.html
@@ -423,6 +423,9 @@ footer p {
   </div>
 </div>
 
+
+  <h3>¿Que Plan vas a elegir?</h3>
+
 <!-- PLANES DEBAJO -->
 <div class="populares-container">
 
