--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ footer p {
 </div>
 
 
-  <h3>¿Que Plan vas a elegir?</h3>
+<center>  <h1>¿Que Plan vas a elegir?</h1></center>
 
 <!-- PLANES DEBAJO -->
 <div class="populares-container">
