--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@ footer p {
     </svg>
   </div>
 
-  <img src="https://disney.images.edge.bamgrid.com/ripcut-delivery/v2/variant/disney/64DBED3E97AEAF24E2236E3D20A8D0F3C7269306EE6E518110C9344D6560C3C7/compose?format=webp&width=660"
+  <img src="https://andro4all.com/hero/2024/12/disney-2025.1735560022.4273.jpg?width=1200"
        style="width:100%; border-radius:10px; margin-top:10px;">
 
   <button class="plan-premium-btn">Plan Premium</button>
