--- a/index.html
+++ b/index.html
@@ -700,6 +700,8 @@ footer p {
   </p>
 
 </div>
+ <img src="https://disney.images.edge.bamgrid.com/ripcut-delivery/v2/variant/disney/A7D04CB097B02A10204AB9A7847B806DE0028DF3E982CBF1B0F828765A024F92/compose?format=webp&width=660"
+  
 
 <!-- FOOTER -->
 <!-- FOOTER ESTILO DISNEY+ REAL -->
