--- a/correo.html
+++ b/correo.html
@@ -1,164 +1,155 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Iniciar sesión | MyDisney</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 
 <style>
-    body {
-        margin: 0;
-        font-family: 'Inter', sans-serif;
-        background: linear-gradient(#03244f, #000);
-        color: #111;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 25px 15px;
-    }
+body {
+    margin: 0;
+    font-family: 'Inter', sans-serif;
+    background: linear-gradient(180deg, #002c56, #001429);
+    color: #000;
+}
 
-    /* LOGO DISNEY+ */
-    .logo-disney {
-        width: 160px;
-        margin-top: 30px;
-        margin-bottom: 25px;
-    }
+/* CONTENEDOR PRINCIPAL */
+.container {
+    max-width: 500px;
+    margin: 0 auto;
+    margin-top: 40px;
+    background: #fff;
+    border-radius: 28px;
+    padding: 35px 28px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.18);
+}
 
-    /* TARJETA */
-    .card {
-        width: 100%;
-        max-width: 440px;
-        background: #fff;
-        border-radius: 28px;
-        padding: 30px 22px;
-        box-shadow: 0 4px 25px rgba(0,0,0,0.18);
-    }
+/* LOGO SUPERIOR */
+.logo-area {
+    text-align: center;
+    margin-top: 35px;
+    margin-bottom: 25px;
+}
 
-    .mydisney {
-        width: 110px;
-        margin-bottom: 15px;
-    }
+.logo-area img {
+    width: 170px;
+    filter: brightness(1000%);
+}
 
-    h1 {
-        font-size: 25px;
-        font-weight: 600;
-        margin: 8px 0 15px 0;
-        color: #000;
-    }
+/* TITULO */
+h1 {
+    font-size: 26px;
+    font-weight: 600;
+    color: #000;
+}
 
-    p {
-        font-size: 15px;
-        font-weight: 400;
-        opacity: .85;
-        line-height: 1.5;
-        margin-bottom: 20px;
-    }
+/* SUBTEXTO */
+.subtxt {
+    font-size: 15px;
+    color: #555;
+    line-height: 1.4;
+    margin-top: 10px;
+    margin-bottom: 25px;
+}
 
-    .input-box {
-        width: 100%;
-        background: #E9EBF0;
-        border-radius: 10px;
-        border: 1px solid #D1D5DB;
-        padding: 18px;
-        font-size: 16px;
-        outline: none;
-        margin-bottom: 18px;
-        transition: .2s;
-    }
+/* INPUT */
+input {
+    width: 100%;
+    padding: 18px;
+    border: 1px solid #d8d8d8;
+    border-radius: 10px;
+    background: #f3f4f6;
+    font-size: 15px;
+    margin-bottom: 18px;
+}
 
-    .input-box:focus {
-        border-color: #737373;
-    }
+/* BOTÓN */
+button {
+    width: 100%;
+    padding: 18px;
+    background: #000;
+    color: #fff;
+    border: none;
+    border-radius: 40px;
+    font-size: 17px;
+    cursor: pointer;
+    margin-top: 5px;
+    font-weight: 500;
+}
 
-    .btn {
-        width: 100%;
-        background: #000;
-        color: #fff;
-        border: none;
-        padding: 16px;
-        border-radius: 30px;
-        font-size: 17px;
-        font-weight: 500;
-        cursor: pointer;
-        margin-top: 5px;
-        transition: .2s;
-    }
+button:hover {
+    background: #222;
+}
 
-    .btn:hover {
-        background: #1b1b1b;
-    }
+/* TEXTO INFERIOR */
+.info-block {
+    padding: 25px;
+    text-align: left;
+    color: #fff;
+    max-width: 600px;
+    margin: 35px auto;
+    font-size: 15px;
+    line-height: 1.5;
+}
 
-    /* SECCIÓN INFERIOR */
-    .info-section {
-        width: 100%;
-        max-width: 600px;
-        margin-top: 45px;
-        color: #fff;
-    }
+/* LOGOS INFERIORES */
+.brands {
+    display: flex;
+    justify-content: center;
+    gap: 22px;
+    flex-wrap: wrap;
+    margin-top: 15px;
+}
 
-    .info-section p {
-        font-size: 15px;
-        opacity: .9;
-        line-height: 1.5;
-    }
-
-    .brands {
-        display: flex;
-        justify-content: center;
-        flex-wrap: wrap;
-        gap: 22px;
-        margin-top: 15px;
-        opacity: .9;
-    }
-
-    .brands img {
-        height: 30px;
-        opacity: .8;
-    }
+.brands img {
+    height: 32px;
+    opacity: 0.7;
+}
 </style>
 
 </head>
-
 <body>
 
-<!-- LOGO PRINCIPAL -->
-<img class="logo-disney" src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg">
+<!-- LOGO SUPERIOR -->
+<div class="logo-area">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg">
+</div>
 
-<!-- TARJETA -->
-<div class="card">
-    <img class="mydisney" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/My_Disney_Logo.png">
+<!-- TARJETA DE LOGIN -->
+<div class="container">
+
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/My_Disney_logo.png" style="width:110px; margin-bottom:10px;">
 
     <h1>Escribir correo para continuar</h1>
 
-    <p>Es necesario iniciar sesión en Disney+ con tu cuenta de MyDisney.  
-    En caso de no tener una, recibirás indicaciones para crearla.</p>
+    <p class="subtxt">
+        Es necesario iniciar sesión en Disney+ con tu cuenta de MyDisney.
+        En caso de no tener una, recibirás indicaciones para crearla.
+    </p>
 
-    <input type="email" placeholder="Correo electrónico" class="input-box">
+    <input type="email" placeholder="Correo electrónico">
 
-    <button class="btn">Continuar</button>
+    <button>Continuar</button>
 </div>
 
-<!-- INFO INFERIOR -->
-<div class="info-section">
+<!-- TEXTO INFORMATIVO -->
+<div class="info-block">
+    <strong>Disney+ es parte de la Familia de Compañías Walt Disney</strong><br><br>
+    MyDisney te permite iniciar sesión fácilmente en los servicios y experiencias de la Familia de Compañías Walt Disney,
+    como Disney+, ESPN, Walt Disney World <a style="color:#48bfff;">y muchos más.</a>
+</div>
 
-<p><b>Disney+ es parte de la Familia de Compañías Walt Disney</b></p>
-
-<p>
-MyDisney te permite iniciar sesión fácilmente en los servicios y experiencias 
-de la Familia de Compañías Walt Disney, como Disney+, ESPN, Walt Disney World y más.
-</p>
-
+<!-- LOGOS INFERIORES -->
 <div class="brands">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/ABC_logo.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney_wordmark.svg">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/ABC_Network_logo.svg">
     <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/ESPN_wordmark.svg">
     <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/MarvelLogo.svg">
     <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Star_Wars_Logo.svg">
     <img src="https://upload.wikimedia.org/wikipedia/commons/8/8f/National-Geographic-Logo.svg">
-</div>
-
+    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Hulu_Logo.svg">
 </div>
 
 </body>
