--- a/correo.html
+++ b/correo.html
@@ -5,64 +5,66 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Iniciar sesión | MyDisney</title>
 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
 
 <style>
 body {
     margin: 0;
     font-family: 'Inter', sans-serif;
-    background: linear-gradient(180deg, #002c56, #001429);
+    background: linear-gradient(180deg, #03254f, #001226);
     color: #000;
-}
-
-/* CONTENEDOR PRINCIPAL */
-.container {
-    max-width: 500px;
-    margin: 0 auto;
-    margin-top: 40px;
-    background: #fff;
-    border-radius: 28px;
-    padding: 35px 28px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.18);
 }
 
 /* LOGO SUPERIOR */
 .logo-area {
     text-align: center;
-    margin-top: 35px;
-    margin-bottom: 25px;
+    padding-top: 45px;
+    padding-bottom: 15px;
 }
 
 .logo-area img {
-    width: 170px;
-    filter: brightness(1000%);
+    width: 160px;
+    filter: brightness(4.5);
+}
+
+/* TARJETA PRINCIPAL */
+.container {
+    background: #fff;
+    border-radius: 28px 28px 0 0;
+    padding: 40px 25px;
+    margin-top: 20px;
+}
+
+/* LOGO MYDISNEY */
+.mydisney-logo {
+    width: 120px;
+    margin-bottom: 10px;
 }
 
 /* TITULO */
 h1 {
     font-size: 26px;
     font-weight: 600;
-    color: #000;
+    margin-bottom: 10px;
 }
 
 /* SUBTEXTO */
 .subtxt {
     font-size: 15px;
     color: #555;
-    line-height: 1.4;
-    margin-top: 10px;
+    line-height: 1.45;
     margin-bottom: 25px;
 }
 
 /* INPUT */
 input {
     width: 100%;
-    padding: 18px;
-    border: 1px solid #d8d8d8;
-    border-radius: 10px;
-    background: #f3f4f6;
+    padding: 17px;
+    border: 1px solid #d1d5db;
+    border-radius: 12px;
     font-size: 15px;
-    margin-bottom: 18px;
+    background: #f4f5f7;
+    margin-bottom: 20px;
 }
 
 /* BOTÓN */
@@ -75,41 +77,43 @@ button {
     border-radius: 40px;
     font-size: 17px;
     cursor: pointer;
-    margin-top: 5px;
     font-weight: 500;
 }
 
-button:hover {
-    background: #222;
+/* BLOQUE INFERIOR (BLANCO) */
+.bottom-info {
+    background: #ffffff;
+    padding: 35px 25px 20px 25px;
 }
 
-/* TEXTO INFERIOR */
-.info-block {
-    padding: 25px;
-    text-align: left;
-    color: #fff;
-    max-width: 600px;
-    margin: 35px auto;
+/* PÁRRAFOS */
+.bottom-info p {
+    color: #333;
     font-size: 15px;
     line-height: 1.5;
 }
 
-/* LOGOS INFERIORES */
+/* ENLACE */
+.link {
+    color: #007bff;
+}
+
+/* LOGOS */
 .brands {
     display: flex;
     justify-content: center;
-    gap: 22px;
     flex-wrap: wrap;
-    margin-top: 15px;
+    gap: 22px;
+    margin-top: 25px;
 }
 
 .brands img {
-    height: 32px;
-    opacity: 0.7;
+    height: 30px;
+    opacity: 0.8;
 }
 </style>
-
 </head>
+
 <body>
 
 <!-- LOGO SUPERIOR -->
@@ -117,10 +121,10 @@ button:hover {
     <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg">
 </div>
 
-<!-- TARJETA DE LOGIN -->
+<!-- FORMULARIO -->
 <div class="container">
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/My_Disney_logo.png" style="width:110px; margin-bottom:10px;">
+    <img class="mydisney-logo" src="https://upload.wikimedia.org/wikipedia/commons/f/f3/My_Disney_Logo.png">
 
     <h1>Escribir correo para continuar</h1>
 
@@ -132,24 +136,31 @@ button:hover {
     <input type="email" placeholder="Correo electrónico">
 
     <button>Continuar</button>
+
 </div>
 
-<!-- TEXTO INFORMATIVO -->
-<div class="info-block">
-    <strong>Disney+ es parte de la Familia de Compañías Walt Disney</strong><br><br>
-    MyDisney te permite iniciar sesión fácilmente en los servicios y experiencias de la Familia de Compañías Walt Disney,
-    como Disney+, ESPN, Walt Disney World <a style="color:#48bfff;">y muchos más.</a>
-</div>
+<!-- BLOQUE BLANCO INFERIOR -->
+<div class="bottom-info">
 
-<!-- LOGOS INFERIORES -->
-<div class="brands">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney_wordmark.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/ABC_Network_logo.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/ESPN_wordmark.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/MarvelLogo.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Star_Wars_Logo.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/8/8f/National-Geographic-Logo.svg">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Hulu_Logo.svg">
+    <p><strong>Disney+ es parte de la Familia de Compañías Walt Disney</strong></p>
+
+    <p>
+        MyDisney te permite iniciar sesión fácilmente en los servicios y experiencias
+        de la Familia de Compañías Walt Disney, como Disney+, ESPN, Walt Disney World
+        <span class="link">y muchos más.</span>
+    </p>
+
+    <!-- LOGOS -->
+    <div class="brands">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney_wordmark.svg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/80/ABC_Network_logo.svg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/ESPN_wordmark.svg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/04/MarvelLogo.svg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/9/9e/Star_Wars_Logo.svg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/8f/National-Geographic-Logo.svg">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5a/Hulu_Logo.svg">
+    </div>
+
 </div>
 
 </body>
