--- a/index.html
+++ b/index.html
@@ -417,6 +417,7 @@ footer p {
     <p>Planes desde <b>COP 24.900/mes</b></p>
 
     <div class="form">
+      <input type="email" placeholder="Correo electrónico">
      
       <button class="btn">SUSCRIBIRME AHORA</button>
     </div>
