--- a/elige.html
+++ b/elige.html
@@ -126,6 +126,64 @@ button:hover {
     padding: 15px;
     text-align: center;
 }
+
+/* FOOTER */
+footer {
+    margin-top: 60px;
+    padding: 40px 25px;
+    background: #0d0d0f;
+    color: #cccccc;
+}
+
+footer h4 {
+    font-size: 15px;
+    margin-bottom: 10px;
+}
+
+footer a {
+    display: block;
+    color: #cccccc;
+    text-decoration: none;
+    font-size: 14px;
+    margin: 5px 0;
+}
+
+footer a:hover {
+    color: #fff;
+}
+
+/* REDES */
+.social {
+    display: flex;
+    justify-content: center;
+    gap: 22px;
+    margin-top: 30px;
+}
+
+.social img {
+    width: 32px;
+    opacity: 0.8;
+}
+
+/* LOGO DISNEY FINAL */
+.footer-logo {
+    text-align: center;
+    margin-top: 25px;
+}
+
+.footer-logo img {
+    width: 140px;
+    opacity: 0.9;
+}
+
+/* TEXTO LEGAL */
+.legal {
+    font-size: 13px;
+    text-align: center;
+    margin-top: 20px;
+    line-height: 1.5;
+    color: #bdbdbd;
+}
 </style>
 </head>
 
@@ -184,6 +242,51 @@ button:hover {
     </table>
 
 </div>
+
+<!-- FOOTER -->
+<footer>
+
+    <h4>Más información</h4>
+    <a href="#">Términos de uso</a>
+    <a href="#">Política de privacidad</a>
+    <a href="#">Publicidad personalizada</a>
+    <a href="#">Acuerdo de Suscripción</a>
+
+    <br>
+
+    <h4>Ayuda</h4>
+    <a href="#">Centro de ayuda</a>
+
+    <h4>Marcas</h4>
+    <a href="#">Disney</a>
+    <a href="#">Pixar</a>
+    <a href="#">Marvel</a>
+    <a href="#">Star Wars</a>
+    <a href="#">National Geographic</a>
+
+    <h4>Colecciones</h4>
+    <a href="#">Lo mejor de Disney</a>
+    <a href="#">Novedades</a>
+
+    <!-- Redes -->
+    <div class="social">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733579.png">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733547.png">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733558.png">
+        <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png">
+        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png">
+    </div>
+
+    <div class="footer-logo">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg">
+    </div>
+
+    <p class="legal">
+        © 2025 Disney y su familia de compañías afiliadas. Todos los derechos reservados.<br>
+        El servicio Disney+ es comercializado por The Walt Disney Company Colombia S.A.S.
+    </p>
+
+</footer>
 
 </body>
 </html>
